--- a/ms-identity/src/main/resources/application.yaml
+++ b/ms-identity/src/main/resources/application.yaml
@@ -1,5 +1,14 @@
 spring:
   application:
     name: ms-identity
+  server:
+    port: 8081
+    servlet:
+      context-path: /ms-identity
+  data:
+    mongodb:
+      uri: mongodb://mongo:mysecretpassword@mongodb:27017/identity_db?authSource=admin
+
+
 
 
