Modified Docker compose

--- a/ms-identity/src/main/resources/application.yaml
+++ b/ms-identity/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
       context-path: /ms-identity
   data:
     mongodb:
-      uri: mongodb://mongo:mysecretpassword@mongodb:27017/identity_db?authSource=admin
+      uri: mongodb://mongo:mysecretpassword@localhost:27017/identity_db?authSource=admin
 
 
 
