--- a/ms-transfer/build.gradle
+++ b/ms-transfer/build.gradle
@@ -25,12 +25,21 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'javax.validation:javax.validation-api:2.0.1.Final'
+//    implementation 'javax.validation:javax.validation-api:2.0.1.Final'
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
     implementation 'org.hibernate.validator:hibernate-validator:6.1.5.Final'
+
+    // MapStruct core dependency
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+
+    // MapStruct processor dependency
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
 }
 
 tasks.named('test') {
