--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,20 +1,31 @@
 server:
-  port: 8080
+  port: 8080  # Gateway-i fərqli portda işlətmək üçün (məsələn, 8080)
 
 spring:
+  application:
+    name: gateway
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true  # Eureka vasitəsilə dinamik servisləri tapmaq üçün
       routes:
-        - id: ms-auth
+        - id: bff-route
+          uri: lb://bff
+          predicates:
+            - Path=/bff/**
+
+        - id: ms-auth-route
           uri: lb://ms-auth
           predicates:
             - Path=/auth/**
 
-        - id: bff
-          uri: lb://bff
+        - id: ms-identity-route
+          uri: lb://ms-identity
           predicates:
-            - Path=/bff/**
+            - Path=/identity/**
+
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/  # Eureka serverin ünvanı
