--- a/ms-identity/Dockerfile
+++ b/ms-identity/Dockerfile
@@ -1,5 +1,6 @@
+# Dockerfile in both bff and ms-auth
 FROM amazoncorretto:21-alpine
-VOLUME /tmp
-COPY build/libs/ms-identity-0.0.1-SNAPSHOT.jar app.jar
-ENV JAVA_OPTS="-Xms512m -Xmx512m"
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar /app.jar"]
+ARG JAR_FILE=build/libs/*.jar
+COPY ${JAR_FILE} app.jar
+EXPOSE 8084
+ENTRYPOINT ["java", "-jar", "/app.jar"]
