ms-transfer updated

--- a/ms-transfer/build.gradle
+++ b/ms-transfer/build.gradle
@@ -34,15 +34,13 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'org.postgresql:postgresql'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-//    implementation 'javax.validation:javax.validation-api:2.0.1.Final'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-    implementation 'org.hibernate.validator:hibernate-validator:6.1.5.Final'
+    implementation 'org.hibernate.validator:hibernate-validator'
 
-    // MapStruct core dependency
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 
-    // MapStruct processor dependency
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
 }
