--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
 }
 
 dependencyManagement {
