--- a/ms-currency/src/main/resources/application.yml
+++ b/ms-currency/src/main/resources/application.yml
@@ -26,3 +26,9 @@ logging:
   level:
     root: INFO
     com.example: DEBUG
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
