--- a/ms-identity/src/main/resources/application.yml
+++ b/ms-identity/src/main/resources/application.yml
@@ -12,21 +12,16 @@ eureka:
     context-path: /ms-identity
 data:
   mongodb:
-    uri: mongodb://admin:adminpassword@localhost:27020/identity_db?authSource=admin
+    uri: mongodb://mongodb:mongodbd@localhost:27018/identity_db?authSource=admin
 management:
   endpoints:
     web:
       exposure:
         include: health,info
-  health:
-    consul:
-      enabled: true
-    mongo:
-      enabled: true
-
-
-
 jwt:
   secret: 9rvuHvQY8fPmkQoVdPo7OQg4NYrmcJkjsYYBZj5gL0A=
   access-token-expiration: 900000
   refresh-token-expiration: 604800000
+
+server:
+  port: 8093
