--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -8,17 +8,31 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: bff-route
-          uri: lb://bff
+        - id: ms-identity
+          uri: lb://MS-IDENTITY
           predicates:
-            - Path=/bff/**
-
-        - id: ms-identity-route
-          uri: lb://ms-identity
+            - Path=/api/v1/auth/**
+        - id: ms-account
+          uri: lb://ms-account
           predicates:
-            - Path=/identity/**
-
-
+            - Path=/api/account/**
+        - id: ms-transfer
+          uri: lb://ms-transfer
+          predicates:
+            - Path=/api/v1/transfers
+        - id: ms-currency
+          uri: lb://ms-currency
+          predicates:
+            - Path=/api/currency/**
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
 eureka:
   client:
     service-url:
