--- a/ms-account/src/main/resources/application.yml
+++ b/ms-account/src/main/resources/application.yml
@@ -30,11 +30,13 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/ # Eureka Server URL
+      defaultZone: http://localhost:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
   instance:
-    hostname: ms-account # Hostname for the microservice
+    hostname: ms-account
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${server.port}
 
 account:
   queue: account.queue # Queue to listen to
