--- a/ms-identity/build.gradle
+++ b/ms-identity/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'redis.clients:jedis:4.4.3'
 	implementation 'org.apache.commons:commons-pool2:2.11.1'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
 
 
