--- a/ms-currency/build.gradle
+++ b/ms-currency/build.gradle
@@ -28,6 +28,11 @@ dependencies {
 
     // Test asılılıqları
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //monitoring
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
 }
 
 dependencyManagement {
