--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,6 +138,26 @@ services:
     networks:
       - app-network
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - app-network
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - app-network
+    volumes:
+      - grafana-data:/var/lib/grafana
+
 networks:
   app-network:
     driver: bridge
@@ -145,3 +165,5 @@ networks:
 volumes:
   mongodb_data:
   postgres-data:
+  grafana-data:
+    driver: local
