--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -32,6 +32,10 @@ dependencies {
 
     // Eureka Server
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
 }
 
 
