--- a/ms-identity/build.gradle
+++ b/ms-identity/build.gradle
@@ -46,6 +46,10 @@ dependencies {
 	implementation 'org.apache.commons:commons-pool2:2.11.1'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
+
 }
 
 
