--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(21) // Using Java 21 toolchain
     }
 }
 
@@ -24,23 +24,29 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
+    // Core Dependencies
+    implementation 'org.springframework.boot:spring-boot-starter-webflux' // Reactive programming support
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway' // API Gateway for routing and filtering
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client' // Eureka client for service discovery
 
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'io.micrometer:micrometer-registry-prometheus'
+    // Monitoring and Metrics
+    implementation 'org.springframework.boot:spring-boot-starter-actuator' // Actuator for application monitoring
+    implementation 'io.micrometer:micrometer-registry-prometheus' // Prometheus integration for metrics
 
+    // Testing Dependencies
+    testImplementation 'org.springframework.boot:spring-boot-starter-test' // Testing Spring Boot applications
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0' // JUnit 5 for testing
+
+    // Optional: Add any additional libraries here
 }
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.4" // Use 2022.x for compatibility with Spring Boot 3.x
+        // Spring Cloud BOM - Manages compatible versions for Spring Cloud dependencies
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.4" // Compatible with Spring Boot 3.x
     }
 }
 
 tasks.named('test') {
-    useJUnitPlatform()
+    useJUnitPlatform() // Configure tests to run with JUnit platform
 }
